--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,15 @@
 attrs==23.2.0
 certifi==2024.2.2
+cffi==1.16.0
 charset-normalizer==3.3.2
+colorama==0.4.6
 h11==0.14.0
 idna==3.7
 iniconfig==2.0.0
 outcome==1.3.0.post0
 packaging==24.0
 pluggy==1.5.0
+pycparser==2.22
 PySocks==1.7.1
 pytest==8.1.1
 python-dotenv==1.0.1
